trunk/Archive2/05/ab0974870e9c93/output
main.cpp: In function ‘int main()’:
main.cpp:31:62: error: no matching function for call to ‘Particle::Particle()’
         std::shared_ptr<Particle> ParticlePtr( new Particle[2], std::default_delete<Particle[]>() );
                                                              ^
main.cpp:31:62: note: candidates are:
main.cpp:7:5: note: Particle::Particle(int)
     Particle( int nID)
     ^
main.cpp:7:5: note:   candidate expects 1 argument, 0 provided
main.cpp:4:7: note: constexpr Particle::Particle(const Particle&)
 class Particle
       ^
main.cpp:4:7: note:   candidate expects 1 argument, 0 provided
